--- a/event-management-app/package.json
+++ b/event-management-app/package.json
@@ -10,13 +10,19 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@react-google-maps/api": "^2.19.2",
     "axios": "^1.6.5",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.309.0",
     "next": "14.0.2",
     "next-video": "^0.9.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
