--- a/event-management-app/package.json
+++ b/event-management-app/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.3",
     "lucide-react": "^0.309.0",
     "next": "14.0.2",
     "next-video": "^0.9.1",
@@ -24,6 +25,8 @@
     "react-datepicker": "^4.25.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
+    "react-icons": "^5.0.1",
+    "react-responsive": "^9.0.2",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
