--- a/event-management-app/package.json
+++ b/event-management-app/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.6.0",
     "react-responsive": "^9.0.2",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
